--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             background: linear-gradient(135deg, #1e1e1e, #571845, #ff5733);
             color: white;
             text-align: center;
+            overflow-x: hidden;
         }
 
         /* Navbar */
@@ -36,6 +37,7 @@
             width: 100%;
             z-index: 1000;
             border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+            animation: slideDown 1s ease-in-out;
         }
 
         .header {
@@ -48,6 +50,7 @@
             height: 60px;
             border-radius: 50%;
             border: 2px solid white;
+            animation: fadeIn 1.5s ease-in-out;
         }
 
         /* Glassmorphism Container */
@@ -59,13 +62,14 @@
             background: rgba(255, 255, 255, 0.1);
             backdrop-filter: blur(15px);
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+            animation: fadeInUp 1s ease-in-out;
         }
 
         h1 {
             font-size: 28px;
             font-weight: bold;
             margin-bottom: 20px;
-            animation: fadeIn 1s ease-in-out forwards;
+            animation: fadeIn 1s ease-in-out;
         }
 
         /* Stylish Checklist */
@@ -87,37 +91,13 @@
             margin: 10px 0;
             opacity: 0;
             transform: translateX(-30px);
-            transition: opacity 0.6s ease-out, transform 0.6s ease-out;
-        }
-
-        .checklist .item.show {
-            opacity: 1;
-            transform: translateX(0);
+            animation: fadeInLeft 1s ease-out forwards;
         }
 
         .checklist .icon {
             font-size: 22px;
             margin-right: 10px;
             color: #ffcc00;
-        }
-
-        /* Results Section */
-        .results {
-            margin-top: 40px;
-            animation: fadeIn 1s ease-in-out 1.5s forwards;
-        }
-
-        .results img {
-            width: 90%;
-            margin: 10px auto;
-            border-radius: 10px;
-            box-shadow: 0 5px 15px rgba(255, 255, 255, 0.2);
-            opacity: 0;
-            transition: opacity 0.8s ease-in-out;
-        }
-
-        .results img.show {
-            opacity: 1;
         }
 
         /* Motivational Quotes Section */
@@ -129,17 +109,8 @@
             backdrop-filter: blur(10px);
             padding: 20px;
             border-radius: 10px;
-            animation: fadeIn 1.5s ease-in-out 2s forwards;
             box-shadow: 0 5px 15px rgba(255, 255, 255, 0.2);
-        }
-
-        .cta {
-            margin-top: 20px;
-            font-weight: bold;
-            font-size: 20px;
-            color: #feca57;
-            opacity: 0;
-            animation: fadeIn 1.2s ease-out 2s forwards;
+            animation: fadeIn 1.5s ease-in-out 1.5s forwards;
         }
 
         /* Button Styling */
@@ -159,6 +130,7 @@
             transition: all 0.3s ease-in-out;
             display: inline-block;
             text-decoration: none;
+            animation: fadeInUp 1s ease-in-out 1.2s;
         }
 
         .custom-button:hover {
@@ -171,6 +143,21 @@
         @keyframes fadeIn {
             from { opacity: 0; }
             to { opacity: 1; }
+        }
+
+        @keyframes fadeInUp {
+            from { opacity: 0; transform: translateY(30px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+
+        @keyframes fadeInLeft {
+            from { opacity: 0; transform: translateX(-30px); }
+            to { opacity: 1; transform: translateX(0); }
+        }
+
+        @keyframes slideDown {
+            from { transform: translateY(-100%); }
+            to { transform: translateY(0); }
         }
 
         /* Responsive Design */
@@ -189,9 +176,6 @@
             }
             .checklist .item {
                 font-size: 16px;
-            }
-            .results img {
-                width: 100%;
             }
         }
 
@@ -213,11 +197,10 @@
 
         <!-- Stylish Checklist -->
         <div class="checklist">
-            <div class="item show"><span class="icon">✅</span> Learn technical and fundamental analysis</div>
-            <div class="item show"><span class="icon">✅</span> Manage your risks like a pro</div>
-            <div class="item show"><span class="icon">✅</span> Stick to your strategy</div>
-            <div class="item show"><span class="icon">✅</span> Stay disciplined — even when it’s tough</div>
-            <div class="item show"><span class="icon">✅</span> Trust the process — profits will follow</div>
+            <div class="item"><span class="icon">✅</span> Learn technical and fundamental analysis</div>
+            <div class="item"><span class="icon">✅</span> Manage your risks like a pro</div>
+            <div class="item"><span class="icon">✅</span> Stick to your strategy</div>
+            <div class="item"><span class="icon">✅</span> Stay disciplined — even when it’s tough</div>
         </div>
 
         <!-- Motivational Quotes -->
@@ -231,4 +214,3 @@
 
 </body>
 </html>
-
